go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gosample
spec:
  selector:
    app: gosample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
