node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodesample
spec:
  selector:
    app: nodesample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
